# sqla-authz

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
.plans/: 01-can-rewrite.md  02-security-model.md  03-type-safety.md  04-explain-mode.md  05-framework-integrations.md  06-advanced-features.md
docs/: getting-started.md  guide.md  index.md  integrations.md  limitations.md  patterns.md  testing.md
docs/architecture/: design-decisions.md
docs/brainstorms/: 2026-03-07-scope-primitive-brainstorm.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guide/: audit-logging.md  configuration.md  point-checks.md  policies.md  predicates.md  relationships.md  session-interception.md
docs/integrations/: async.md  fastapi.md  flask.md
docs/migration/: from-oso.md
docs/overrides/: main.html
docs/plans/: 2026-02-21-fix-all-review-findings-plan.md  2026-03-07-docs-revision-typed-actions-and-scopes-plan.md  2026-03-07-feat-cross-cutting-scope-primitive-plan.md  2026-03-07-feat-scope-awareness-in-explain-simulate-audit-plan.md
docs/reference/: api.md  changelog.md  exceptions.md
docs/stylesheets/: extra.css
docs/testing/: fixtures.md  strategies.md  utilities.md
src/sqla_authz/: __init__.py  _action_validation.py  _audit.py  _checks.py  _types.py  _verify.py  actions.py  exceptions.py
src/sqla_authz/compiler/: __init__.py  _eval.py  _expression.py  _query.py  _relationship.py
src/sqla_authz/config/: __init__.py  _config.py
src/sqla_authz/explain/: __init__.py  _access.py  _models.py  _query.py
src/sqla_authz/integrations/: __init__.py
src/sqla_authz/policy/: __init__.py  _base.py  _decorator.py  _predicate.py  _registry.py  _scope.py
tests/: conftest.py  test_actions.py  test_audit.py  test_audit_scopes.py  test_checks.py  test_edge_cases.py  test_exceptions.py  test_public_api.py  test_query_only.py  test_types.py  test_verify_scopes.py
tests/benchmarks/: conftest.py  test_benchmarks.py
tests/integration/: test_async.py  test_property.py
tests/test_compiler/: test_eval.py  test_expression.py  test_query.py  test_relationship.py  test_scope_expression.py
tests/test_config/: test_config.py
tests/test_explain/: test_explain_access.py  test_explain_access_scopes.py  test_explain_query.py  test_explain_query_only.py  test_explain_query_scopes.py  test_models.py
tests/test_policy/: test_decorator.py  test_decorator_query_only.py  test_predicate.py  test_registry.py  test_scope.py
tests/test_session/: test_bypasses.py  test_context.py  test_interceptor.py  test_safe_get.py  test_scope_interceptor.py  test_strict_mode.py  test_write_authz.py
tests/test_testing/: conftest.py  test_actors.py  test_assertions.py  test_fixtures.py  test_isolation.py  test_plugin.py  test_simulation.py  test_simulation_scopes.py
(+23 files in other folders)
