[project]
name = "sqla-authz"
version = "0.1.0b1"
description = "Embedded SQLAlchemy 2.0-native authorization library that converts declarative Python policies into SQL WHERE clauses."
readme = "README.md"
authors = [
    { name = "Colby Joines", email = "cjoines@blueally.com" }
]
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Security",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["authorization", "sqlalchemy", "row-level-security", "rbac", "access-control"]
dependencies = [
    "sqlalchemy>=2.0",
]

[project.urls]
Homepage = "https://github.com/colbyjoines/sqla-authz"
Documentation = "https://colbyjoines.github.io/sqla-authz/"
Repository = "https://github.com/colbyjoines/sqla-authz"
Issues = "https://github.com/colbyjoines/sqla-authz/issues"
Changelog = "https://github.com/colbyjoines/sqla-authz/blob/main/CHANGELOG.md"

[project.optional-dependencies]
testing = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "aiosqlite>=0.19",
]
fastapi = ["fastapi>=0.100", "httpx>=0.24"]
all = ["sqla-authz[fastapi]"]
dev = [
    "sqla-authz[testing,fastapi]",
    "pyright>=1.1",
    "ruff>=0.1",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "pytest-benchmark>=4.0",
]
docs = [
    "zensical>=0.0.20",
    "mkdocstrings[python]>=0.24",
]

[project.entry-points.pytest11]
sqla_authz = "sqla_authz.testing._plugin"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
markers = [
    "benchmark: performance benchmarks (deselect with '-m \"not benchmark\"')",
    "integration: integration tests requiring external services",
]

[tool.pyright]
include = ["src"]
pythonVersion = "3.10"
typeCheckingMode = "strict"

[tool.coverage.run]
source = ["sqla_authz"]

[tool.coverage.report]
fail_under = 55
exclude_also = [
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@overload",
    "\\.\\.\\.",
]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# SQLAlchemy columns require `== True` for SQL generation (not Python truth checks)
"tests/**" = ["E712"]
"src/sqla_authz/**" = ["E712"]
"src/sqla_authz/integrations/fastapi/_dependencies.py" = ["N802"]
